<resources>
    <string name="app_name">InstagramClone</string>
    <string name="profile_settings">profile settings</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="options">Options</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">email</string>
    <string name="login">Login</string>
    <string name="create_account_link">No account yet? Create one</string>
    <string name="register_new_account">Register a new Account</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait…</string>
    <string name="auth_failed">Authentication failed.</string>
</resources>
