<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="55dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/instagram_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:id="@+id/input_email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:id="@+id/input_password"/>

        </com.google.android.material.textfield.TextInputLayout>
        
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:padding="12dp"
            android:background="@drawable/white_rounded_button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/create_account_link"
            android:gravity="center"
            android:textSize="16sp"
            android:id="@+id/link_signup"
            android:textColor="@color/linkBlue"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/loginRequestLoadingProgressbar"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/loginRequestLoadingProgressbar"
        android:layout_alignEnd="@+id/loginRequestLoadingProgressbar"
        android:layout_alignStart="@+id/loginRequestLoadingProgressbar"
        android:id="@+id/txtPleaseWait"/>

</RelativeLayout>