<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">


        <TextView
            android:id="@+id/txtPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="250"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtFollowers"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="250" />

        <TextView
            android:id="@+id/txtTxtPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/posts"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtTxtFollowers"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Posts" />

        <TextView
            android:id="@+id/txtFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="150"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/txtFollowing"
            app:layout_constraintStart_toEndOf="@+id/txtPosts"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="150" />

        <TextView
            android:id="@+id/txtTxtFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/followers"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/txtTxtFollowing"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toEndOf="@+id/txtTxtPosts"
            app:layout_constraintTop_toBottomOf="@+id/txtFollowers"
            tools:text="Followers" />

        <TextView
            android:id="@+id/txtFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="180"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtFollowers"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="180" />

        <TextView
            android:id="@+id/txtTxtFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/following"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtTxtFollowers"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Following" />

        <TextView
            android:id="@+id/txtEditProfile"
            android:layout_width="199dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/grey_border"
            android:text="@string/edit_your_profile"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTxtFollowers"
            tools:text="Edit your profile" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>